<resources>

    <string name="app_name">Flashcard Decks</string>
    <string name="action_new_deck">New Deck</string>
    <string name="action_new_card">New Card</string>
    <string name="your_decks">Your Decks</string>
    <string name="hint_new_deck_name">Deck Name…</string>
    <string name="label_deck_name">Name</string>
    <string name="label_cards">Cards (Front / Back)</string>
    <string name="label_new_card">New Card</string>
    <string name="hint_card_front">Front…</string>
    <string name="hint_card_back">Back…</string>
    <string name="label_decks">Decks</string>
    <string name="edit_deck">Edit Deck…</string>
    <string name="edit_card">Edit Card</string>
    <string name="playing_deck">Playing: %s</string>
    <string name="action_delete_deck">Delete Deck</string>
    <string name="confirm_delete_deck">Are you sure you want to delete this deck?</string>
    <string name="confirm_delete_card">Are you sure you want to delete this card?</string>
    <string name="hint_new_card">New Card…</string>

</resources>
