<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/abc_dialog_padding_top_material"
    android:layout_marginBottom="@dimen/abc_dialog_padding_top_material"
    android:layout_marginLeft="@dimen/abc_dialog_padding_material"
    android:layout_marginRight="@dimen/abc_dialog_padding_material">

    <TextView
        android:id="@+id/label_deck_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_deck_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <EditText
        android:id="@+id/edit_deck_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_new_deck_name"
        android:inputType="text"
        android:layout_below="@+id/label_deck_name" />

    <Space
        android:id="@+id/space0"
        android:layout_width="match_parent"
        android:layout_height="@dimen/abc_dialog_padding_top_material"
        android:layout_below="@+id/edit_deck_name" />

    <TextView
        android:id="@+id/label_cards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_cards"
        android:layout_below="@+id/space0" />

    <ListView
        android:id="@+id/card_list_view"
        android:transcriptMode="alwaysScroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_cards"
        android:layout_above="@+id/new_card_layout" />

    <LinearLayout
        android:id="@+id/new_card_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true">

        <EditText
            android:id="@+id/edit_card_front"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/hint_new_card"
            android:inputType="text"
            android:enabled="false" />

        <EditText
            android:id="@+id/edit_card_back"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/hint_card_back"
            android:inputType="text"
            android:visibility="gone" />

    </LinearLayout>

</RelativeLayout>
